--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+/* AppComponent's private CSS styles */
+h1 {
+	font-size: 1.2em;
+	margin-bottom: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 {
+	font-size: 2em;
+	margin-top: 0;
+	padding-top: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav a {
+	padding: 5px 10px;
+	text-decoration: none;
+	margin-top: 10px;
+	display: inline-block;
+	background-color: #eee;
+	border-radius: 4px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav a:visited,
+a:link {
+	color: #334953;
 }
-
-.App-link {
-  color: #61dafb;
+nav a:hover {
+	color: #039be5;
+	background-color: #cfd8dc;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav a.active {
+	color: #039be5;
 }
